--- a/BackEnd/exam-management/src/main/resources/application.properties
+++ b/BackEnd/exam-management/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-server.port=8027
 spring.datasource.url=jdbc:mysql://localhost:3306/exam_management
 spring.datasource.username=root
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
