--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -49,6 +49,7 @@
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "history": "^5.3.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
@@ -60,7 +61,8 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "simplebar-react": "^3.2.1",
-    "web-vitals": "^3.1.1"
+    "web-vitals": "^3.1.1",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
